--- a/text_summarization_baseline.ipynb
+++ b/text_summarization_baseline.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d54a8e3b-b463-46d6-9503-18559b82ecc3",
    "metadata": {},
    "outputs": [],
@@ -456,7 +456,7 @@
    "execution_count": 11,
    "id": "62f6897f-3df8-44bc-89ee-acb594360b9b",
    "metadata": {
-   "scrolled": True
+   "scrolled": true
    },
    "outputs": [],
    "source": [
